fdo#63711 Calc: fix Catalan and Hungarian hyphenation

Change-Id: I08962578e5d41637e78c91f5df45e518893c82e5